@@ -1,3 +1,9 @@
+2002-02-08  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>
+
+	* [w3m-dev 03025] fix image loading on EWS4800
+	* image.c (loadImage): exit if symlink failed
+			exit if fopen failed
+
 2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03022] SSL certificates of frame body
